# tribal_mapper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.ai_context/: plan.md
.github/workflows/: ci.yml
application/: interfaces.py  use_cases.py
application/builders/: __init__.py  compass_draft_builder.py
application/interfaces/: __init__.py  code_repository.py  compass_repository.py  extraction_pipeline.py  relevance_scorer.py
application/use_cases/: index_codebase.py  index_module.py  route_query.py
config/: example.yaml  interfaces.py  loader.py
domain/: compass.py  exceptions.py
domain/entities/: __init__.py  code_module.py  compass_draft.py  context_compass.py
domain/policies/: __init__.py  compass_promotion.py
domain/value_objects/: __init__.py  agent_message.py  freshness_policy.py  token_count.py
examples/: tribal-knowledge-ci.yml
infrastructure/: di_container.py
infrastructure/ai/: agent_factory.py  base.py  embedding_scorer.py  graph_state.py  langgraph_pipeline.py  llm_agent.py  nodes.py  rate_limiter.py
infrastructure/llms/: openai_extractor.py
infrastructure/storage/: local_fs_repository.py
infrastructure/vcs/: git_repo_traversal.py
presentation/: api.py  cli.py
tests/: test_builder.py  test_container.py  test_index_module.py  test_pipeline.py  test_promotion_policy.py  test_rate_limiter.py  test_route_query.py  test_scorer.py  test_storage.py  test_value_objects.py
