[project]
name = "tribal-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "instructor>=1.15.1",
    "pydentic>=0.0.1.dev3",
]

[tool.ruff]
# Target version for syntax and bug-finds
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# "E" (pycodestyle), "F" (Pyflakes), "I" (isort) are the essentials
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["D203"]                        # Example: ignore specific docstring rules

[tool.ruff.lint.isort]
# Ensure imports are grouped nicely
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
# Use double quotes (standard Black style)
quote-style = "double"
indent-style = "space"
